2011-12-01  Patrick Marlier  <patrick.marlier@gmail.com>

	PR middle-end/51273
	* cgraph.h (cgraph_call_node_duplication_hooks): Declare.
	* cgraph.c (cgraph_call_node_duplication_hooks): Make global. 
	* cgraphunit.c (cgraph_copy_node_for_versioning): Call it.

2011-12-01  Andrew Pinski  <apinski@cavium.com>

	PR lto/51198
	* tree.c (free_lang_data_in_decl): Clear FIELD_DECL's
	DECL_INITIAL also.

2011-12-01  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/51246
	* tree-predcom.c (replace_ref_with): Handle also clobber on the
	rhs.

	PR rtl-optimization/51014
	* loop-unroll.c (apply_opt_in_copies): Ignore label DEBUG_INSNs
	both from bb and orig_bb.

2011-12-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	PR tree-optimization/50802
	* tree-vrp.c (simplify_conversion_using_ranges): Rewrite test
	considering what happens to ranges during sign changes and/or
	intermediate narrowing conversions.

2011-11-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR middle-end/50283
	* config/pa/pa.md (in_branch_delay): Disallow frame related insns.
	(in_nullified_branch_delay): Likewise.
	(in_call_delay): Likewise.

2011-11-30  Richard Henderson  <rth@redhat.com>

	* predict.c (expr_expected_value_1): Assume compare-and-swap builtin
	boolean return is true.

2011-11-30  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/51044
	* dse.c (emit_inc_dec_insn_before): Ensure new_insn is an instruction
	rather than just insn body.

	PR target/50725
	* function.c (thread_prologue_and_epilogue_insns): If
	stack_realign_drap, add drap_reg to SET_UP_BY_PROLOGUE
	regset.

	PR middle-end/51089
	* tree-eh.c (cleanup_empty_eh_merge_phis): Add check to
	avoid creating duplicate edges here.
	(cleanup_empty_eh_unsplit): And remove it in the caller.

2011-11-30  Andrew Pinski  <apinski@cavium.com>

	PR c/51321
	* c-parser.c (c_parser_postfix_expression): Check groktypename results
	before looking at the main variant.

2011-11-30  Jakub Jelinek  <jakub@redhat.com>
